# leti_piaa_lab5

./: CMakeLists.txt  Readme.md
include/googletest/: Makefile  cmake_install.cmake
src/: KMPAlgorithm.cpp  KMPAlgorithm.h  cycle_shift.cpp  kmp.cpp
test/: KMPTest.cpp  KMPTest.h  cycle_shift_test.cpp  faster_algorithm.cpp  kmp_test.cpp
